# CppEdgeTracking

./: CMakeLists.txt  README.md
example/: J47_NT10_E258.txt
img/: J47_NT10_E258.csv  J47test.tif
include/: FileParser.h  ImageProcessing.h  Interpolation.h  MatrixProcessing.h  Parser.h  QueueManager.h
src/: EdgeTracking.cpp  FileParser.cpp  ImageProcessing.cpp  Interpolation.cpp  Parser.cpp  QueueManager.cpp  zip.cpp
test/: J47_NT10_E258.txt
test/ET/: J47_NT10_E258.res
test/camera/: J47_NT10_E258-0004_0.tif  J47_NT10_E258-0371_0.tif
test1/: J47_NT10_E258.txt
test1/camera/: J47_NT10_E258-0000_0.tif  J47_NT10_E258-0001_0.tif  J47_NT10_E258-0002_0.tif  J47_NT10_E258-0003_0.tif  J47_NT10_E258-0005_0.tif  J47_NT10_E258-0006_0.tif  J47_NT10_E258-0007_0.tif  J47_NT10_E258-0008_0.tif  J47_NT10_E258-0009_0.tif  J47_NT10_E258-0010_0.tif  J47_NT10_E258-0011_0.tif  J47_NT10_E258-0012_0.tif  J47_NT10_E258-0013_0.tif  J47_NT10_E258-0014_0.tif  J47_NT10_E258-0015_0.tif  J47_NT10_E258-0016_0.tif  J47_NT10_E258-0017_0.tif  J47_NT10_E258-0018_0.tif  J47_NT10_E258-0019_0.tif  J47_NT10_E258-0020_0.tif  J47_NT10_E258-0021_0.tif  J47_NT10_E258-0022_0.tif  J47_NT10_E258-0023_0.tif  J47_NT10_E258-0024_0.tif  J47_NT10_E258-0025_0.tif  J47_NT10_E258-0026_0.tif  J47_NT10_E258-0027_0.tif  J47_NT10_E258-0028_0.tif  J47_NT10_E258-0029_0.tif  J47_NT10_E258-0030_0.tif  J47_NT10_E258-0031_0.tif  J47_NT10_E258-0032_0.tif  J47_NT10_E258-0033_0.tif  J47_NT10_E258-0034_0.tif  J47_NT10_E258-0035_0.tif  J47_NT10_E258-0036_0.tif  (+380 more)
test2/: J47_NT10_E258.txt
use/: canny.cpp  openWrite.cpp
(+2 files in other folders)
